--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "prettus/l5-repository": "^2.9"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.7",
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
